--- a/src/.default_config.json
+++ b/src/.default_config.json
@@ -13,7 +13,8 @@
             }
         },
         "runtime": {
-            "FPS": 60
+            "FPS": 60,
+            "compiler":true
         }
     }
 }
